--- a/package.json
+++ b/package.json
@@ -4,9 +4,12 @@
   "description": "Techpit「実務を意識した JavaScript の WEB システム開発体験を通して知識と考え方を身に付けよう！」教材プロジェクト",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon server.js"
+    "start": "nodemon server.js",
+    "reset": "node password-reset.js"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "crypto-random-string": "^3.3.1",
     "ejs": "^3.1.3",
     "express": "^4.17.1",
     "nodemon": "^2.0.15"
